--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
         margin: 15px;
         padding: 15px 0;
         text-align: center;
+
     }
 
-    #apropos{
-  background:#F4F4F4;
-  width:80%;
+        #apropos{
+        background:#F4F4F4;
+        width:80%;
+        margin: 0 auto;
+        display:flex
+        flex-wrap: wrap;
+        justify-content: center;
     }
+
 
 
 
@@ -61,7 +67,8 @@
         <h2>Tentez de nouvelles expériences !</h2>
       </section>
       <section id="apropos">
-        
+
+     
         <div class="box">
             <h3>Un défi chaque jour</h3>
             <p>Recevez <strong>de nouveaux challenges </strong> tous les jours </p>
