--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
             color: red;
             font-weight: lighter;
             font-family: 'Nerko One', cursive;
+            text-align: center;
 
         }
         h2 {
             color:green;
             font-weight: bolder;
+            text-align: center;
         }
+
         h3 {
             font-weight: bolder;
+            text-align: center;
         }
         a {
             color: blue;
@@ -37,7 +41,6 @@
         border: 1px solid #000000;
         width: 400px;
         background: #FAFAFA;
-
         margin: 15px;
         padding: 15px 0;
         text-align: center;
@@ -48,9 +51,10 @@
         background:#F4F4F4;
         width:80%;
         margin: 0 auto;
-        display:flex
+        display:flex;
         flex-wrap: wrap;
         justify-content: center;
+        text-align: center;
     }
 
 
